feat: PRESC-413 sort_distinct_PrescripingInst